bk_ida/gccida/g0/emit_store_flag
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4697:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4700:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4705:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4708:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4710:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4712:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4716:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4721:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+24h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4725:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code icode; // [rsp+4Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4729:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode target_mode; // [rsp+6Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4734:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_mode; // [rsp+84h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4807:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4813:33: error: invalid suffix 'xmode' on integer constant
op0h = gen_highpart( *(short *)0xmode, op0a); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4814:32: error: invalid suffix 'xmode' on integer constant
op0l = gen_lowpart( *(short *)0xmode, op0a); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4815:36: error: invalid suffix 'xmode' on integer constant
op0both = expand_binop( *(short *)0xmode, optab_table[19], op0h, op0l, 0LL, unsignedp, OPTAB_DIRECT); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4817:66: error: invalid suffix 'xmode' on integer constant
return emit_store_flag( target, codea, op0both, op1a, *(short *)0xmode, unsignedp, normalizep); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4821:17: error: invalid suffix 'xmode' on integer constant
v9 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4822:32: error: invalid suffix 'xmode' on integer constant
v10 = gen_highpart( *(short *)0xmode, op0a); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/expmed.c:4827:68: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( op1a == const_int_rtx[64] && ( codea == LT || codea == GE) && mode_class_0[mode] == MODE_INT ) 
                                                                   ^~~~~~~~~~~~
                                                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_store_flag/src/obj/expmed.o] Error 1
